# ChangeLog for dev-java/sun-jdk
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.235 2008/04/17 08:48:05 caster Exp $

  17 Apr 2008; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.06.ebuild:
  Add note about reinstalling eclipse-sdk for bug #215150.

*sun-jdk-1.6.0.06 (16 Apr 2008)

  16 Apr 2008; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.6.0.06.ebuild:
  Version bump. Fixes problems with xcb - bug #156353.

  30 Mar 2008; Robin H. Johnson <robbat2@gentoo.org>
  sun-jdk-1.5.0.15-r1.ebuild:
  Force mtime to change to try and resolve bug #215288.

  28 Mar 2008; Vlastimil Babka <caster@gentoo.org>
  sun-jdk-1.5.0.15-r1.ebuild, sun-jdk-1.6.0.05-r1.ebuild:
  Fix CDS generation on hardened, bug #215225.

*sun-jdk-1.6.0.05-r1 (27 Mar 2008)
*sun-jdk-1.5.0.15-r1 (27 Mar 2008)

  27 Mar 2008; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.4.2.16.ebuild,
  -sun-jdk-1.5.0.13.ebuild, -sun-jdk-1.5.0.14.ebuild,
  +sun-jdk-1.5.0.15-r1.ebuild, -sun-jdk-1.6.0.03.ebuild,
  -sun-jdk-1.6.0.04.ebuild, +sun-jdk-1.6.0.05-r1.ebuild:
  Remove vulnerable versions. Revbump to create Class Data Sharing
  archive(s), bug #207282.

  27 Mar 2008; Markus Meier <maekke@gentoo.org> sun-jdk-1.5.0.15.ebuild,
  sun-jdk-1.6.0.05.ebuild:
  amd64 stable, security bug #212425

  27 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  sun-jdk-1.6.0.05.ebuild:
  stable x86, security bug 212425

  27 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  sun-jdk-1.5.0.15.ebuild:
  stable x86, security bug 212425

*sun-jdk-1.6.0.05 (26 Mar 2008)
*sun-jdk-1.5.0.15 (26 Mar 2008)

  26 Mar 2008; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.5.0.15.ebuild,
  +sun-jdk-1.6.0.05.ebuild:
  Version bump, security bug #212425.

  06 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  sun-jdk-1.4.2.17.ebuild:
  stable x86, security bug 212425

*sun-jdk-1.4.2.17 (05 Mar 2008)
